--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+
+body{
+    font-family: sans-serif;
+}
+.main__div{
+    width: 100%;
+    height: 100vh;
+    background-color: #6983aa;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.center__div{
+    width: 25%;
+    height: 80vh;
+    background-color: #f4f4f4;
+    box-shadow: 5px 5px 25px -5px rgba(0 ,0 ,0 ,0.5);
+    border-radius: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+    font-size: 4rem;
+    color: #ffffff;
+    background: transparent;
+    background-color: #bdd453;
+    padding: 6px 0 2px 0;
+    margin-bottom: 10px;
+    box-shadow: 5px 5px 15px -5px rgba(0 , 0, 0 ,0.3);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input{
+    text-align: center;
+    height: 30px;
+    top: 10px;
+    border: none;
+    background: transparent;
+    font-size: 2rem;
+    font-weight: 500;
+    width: 60%;
+    border-bottom: 2px solid #ecba4e;
+    outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+    min-height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    border-color: transparent;
+    background-color: #43c8da;
+    font-size: 3.2rem;
+    box-shadow: 5px 5px 15px -5px rgba(0 , 0, 0 ,0.3);
+    margin-left: 1rem;
+    color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+    background-color: #20bf6b;
+}
+
+ol{
+    margin-top: 3rem;
+}
+
+ol li{
+    padding-left: 0;
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 500;
+    min-height: 4rem;
+    display: flex;
+    align-items: center;
+    color: #df3d3d;
+    text-transform: capitalize;
+}
+
+.todo__style{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.todo__style .fa-times{
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e23333;
+    border-radius: 50%;
+    margin: 0 15px 0 35px;
+    color: aliceblue;
+    box-shadow: 5px 5px 15px -5px rgba(0 , 0, 0 ,0.3);
+}
+
+.todo__style .fa-times:hover{
+    background-color: crimson;
 }
